# YP_module_1_YPBank

./: .gitignore  Cargo.toml  README.md
comparer/: Cargo.toml
comparer/src/: main.rs
converter/: Cargo.toml
parser/src/: bin_format.rs  csv_format.rs  lib.rs  text_format.rs
src/: bin_format.rs  csv_format.rs  error.rs  lib.rs  main.rs  text_format.rs
